# interest-form-api

./: .env.sample  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml
k6/: send-interests.js
scripts/: create-db-table.sh  create-n-elements.sh  show-db-items.sh  show-table-infos.sh  start-localhost-db.sh  stop-localhost-db.sh
src/: aws.rs  db.rs  http_handler.rs  main.rs  models.rs  router.rs
src/handlers/: create_interest.rs  get_interests.rs  mod.rs
terraform/: README.md  api_gateway.tf  dynamodb.tf  iam.tf  outputs.tf  variables.tf
tests/: data-mock.json
