[package]
name = "interest-form-api"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.5.16"
aws-sdk-dynamodb = "1.64.0"
aws-sdk-cloudwatch = "1.68.0"
chrono = "0.4.39"
lambda_http = "0.13.0"
once_cell = "1.19.0"
serde = "1.0.217"
serde_dynamo = "4.2.14"
serde_json = "1.0.138"
tokio = { version = "1", features = ["macros"] }
uuid = { version = "1.13.1", features = ["v4"] }